--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,19 @@
 language: python
 python:
-  - "3.5"
   - "3.6"
+  - "3.7"
+  - "3.8"
 
 env:
   - DJANGO_VERSION=1.11
   - DJANGO_VERSION=2.0
+  - DJANGO_VERSION=2.1
+  - DJANGO_VERSION=2.2
 
 install:
   - cd example
   - pip install -r requirements/base.txt
-  - pip uninstall -y -q django
-  - pip install -q Django==$DJANGO_VERSION
+  - pip install -q Django~=$DJANGO_VERSION
   - ln -sf $(pwd)/../pyston/ $(python -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())")
 
 # command to run tests
