--- a/example/requirements.txt
+++ b/example/requirements.txt
@@ -5,7 +5,7 @@ html5lib==1.1
 pillow>=8.0.1
 XlsxWriter==0.7.7
 pep8==1.6.2
-django-germanium==2.3.0
+skip-django-germanium==2.3.6.1
 xhtml2pdf==0.2.5
 coverage==5.3.1
 factory-boy==3.2.0
@@ -16,5 +16,5 @@ psycopg2-binary==2.8.6
 elasticsearch==7.13.4
 elasticsearch-dsl==7.4.0
 pynamodb==5.3.3
-pydjamodb==0.0.7
+skip-pydjamodb==0.0.9.1
 -e ../
